fix(steps): disassociate --step-tag-size, --step-line-gap, --step-min-size and --step-line-size

--- a/packages/varlet-ui/src/step/step.less
+++ b/packages/varlet-ui/src/step/step.less
@@ -11,8 +11,8 @@
   --step-content-active-color: #000;
   --step-line-background: #000;
   --step-line-gap: 8px;
-  --step-min-size: calc(var(--step-tag-size) + var(--step-line-gap));
-  --step-line-size: calc(100% - var(--step-min-size));
+  --step-min-size: calc(20px + 8px);
+  --step-line-size: calc(100% - calc(20px + 8px));
   --step-vertical-tag-margin: 0 4px;
   --step-vertical-min-height: 50px;
 }
